--- a/vignettes/manual.ltx
+++ b/vignettes/manual.ltx
@@ -19,7 +19,7 @@
 \usepackage[english]{babel}
 \usepackage{natbib}
 \bibpunct{(}{)}{;}{a}{}{,}
-\bibliographystyle{ksfh_nat}
+\bibliographystyle{apalike}
 
 %% new custom commands
 \newcommand{\code}[1]{\texttt{#1}}
